--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-4 offset-lg-2">
           <div class="right-image">
             <img src="./assets/images/image.jpg" alt="" height="400px">
-            <span class="price">$22</span>
-            <span class="offer">-40%</span>
+            <span class="price">4.4</span>
+            <span class="offer">2.27%</span>
           </div>
         </div>
       </div>
@@ -162,52 +162,52 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="./assets/images/image1.jpg" alt=""></a>
-              <span class="price"><em>$28</em>$20</span>
+              <a href="#"><img src="./assets/images/image1.jpg" alt=""></a>
+              <span class="price">6.0</span>
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <h4>GTA</h4>
+              <a href="#"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="./assets/images/image2.jpg" alt=""></a>
-              <span class="price">$44</span>
+              <a href="#"><img src="./assets/images/image2.jpg" alt=""></a>
+              <span class="price">4.4</span>
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <h4>The witcher</h4>
+              <a href="#"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="./assets/images/image3.jpg" alt=""></a>
-              <span class="price"><em>$64</em>$44</span>
+              <a href="#"><img src="./assets/images/image3.jpg" alt=""></a>
+              <span class="price">2.4</span>
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <h4>Portal</h4>
+              <a href="#"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
-              <a href="product-details.html"><img src="./assets/images/image4.jpg" alt="" ></a>
-              <span class="price">$32</span>
+              <a href="#"><img src="./assets/images/image4.jpg" alt="" ></a>
+              <span class="price">4.49</span>
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
-              <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
+              <h4>Half life</h4>
+              <a href="#"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
@@ -232,72 +232,72 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="item item-edit2">
             <div class="thumb">
-              <a href="product-details.html"><img src="./assets/images/XCOM-Enemy Unknown.jpg" alt=""></a>
+              <a href="#"><img src="./assets/images/XCOM-Enemy Unknown.jpg" alt=""></a>
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
                 <h4>XCOM-Enemy</h4>
-                <a href="product-details.html" class="categorydata">Explore</a>
+                <a href="game.html" class="categorydata">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="item  item-edit2">
             <div class="thumb">
-              <a href="product-details.html"><img src="./assets/images/warframe.jpg" alt=""></a>
+              <a href="#"><img src="./assets/images/warframe.jpg" alt=""></a>
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
                 <h4>warframe</h4>
-                <a href="product-details.html" class="categorydata">Explore</a>
+                <a href="game.html" class="categorydata">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="item  item-edit2">
             <div class="thumb">
-              <a href="product-details.html"><img src="./assets/images/godofwar.jpg" alt=""></a>
+              <a href="#"><img src="./assets/images/godofwar.jpg" alt=""></a>
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
                 <h4>godofwar</h4>
-                <a href="product-details.html" class="categorydata">Explore</a>
+                <a href="game.html" class="categorydata">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="item item-edit2">
             <div class="thumb">
-              <a href="product-details.html"><img src="./assets/images/neverwinter.jpg" alt=""></a>
+              <a href="#"><img src="./assets/images/neverwinter.jpg" alt=""></a>
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
                 <h4>neverwinter</h4>
-                <a href="product-details.html" class="categorydata">Explore</a>
+                <a href="game.html" class="categorydata">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="item item-edit2">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/Mortal Kombat X.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/Mortal Kombat X.jpg" alt=""></a>
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
                 <h4>Mortal Kombat</h4>
-                <a href="product-details.html" class="categorydata">Explore</a>
+                <a href="game.html" class="categorydata">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="item item-edit2">
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/LEGO Marvel Super Heroes.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/LEGO Marvel Super Heroes.jpg" alt=""></a>
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
                 <h4>LEGO Marvel Super Heroes</h4>
-                <a href="product-details.html" class="categorydata">Explore</a>
+                <a href="game.html" class="categorydata">Explore</a>
             </div>
           </div>
         </div>
@@ -318,39 +318,39 @@ https://templatemo.com/tm-589-lugx-gaming
           <div class="item">
             <h4>Action</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/word of goo.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/word of goo.jpg" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Adventure</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/Black Desert.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/Black Desert.jpg" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Simulation</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/prey.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/prey.jpg" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>RPG</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/destiny2.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/destiny2.jpg" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Casual</h4>
             <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/forza horizon 4.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/forza horizon 4.jpg" alt=""></a>
             </div>
           </div>
         </div>
@@ -367,12 +367,12 @@ https://templatemo.com/tm-589-lugx-gaming
             <div class="row data">
               <div class="col-lg-12">
                 <div class="section-heading">
-                  <h6>Our Shop</h6>
-                  <h2>Go Pre-Order Buy & Get Best <em>Prices</em> For You!</h2>
+                  <h6>more games</h6>
+                  <h2>Curious about what more we offer ? <em>and just </em> how much?</h2>
                 </div>
                 <p>Lorem ipsum dolor consectetur adipiscing, sed do eiusmod tempor incididunt.</p>
                 <div class="main-button">
-                  <a href="game.html">Shop Now</a>
+                  <a href="game.html">vie more</a>
                 </div>
               </div>
             </div>
@@ -384,7 +384,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <div class="col-lg-12">
                 <div class="section-heading">
                   <h6>NEWSLETTER</h6>
-                  <h2>Get Up To $100 Off Just Buy <em>Subscribe</em> Newsletter!</h2>
+                  <h2>Fore more <strong>Game</strong> info <em>Subscribe</em> to Newsletter!</h2>
                 </div>
                 <div class="search-input">
                   <form id="subscribe" action="#">
