--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-589-lugx-gaming
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html">Home</a></li>
-                      <li><a href="game.html">Game Index</a></li>
+                      <li><a href="game.html">More Games</a></li>
                       <li><a href="#">Sign In</a></li>
                   </ul>   
                     <a class='menu-trigger'>
